--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,5 @@
             "email": "luiz.crisanto@gmail.com"
         }
     ],
-    "require": {
-        "vlucas/phpdotenv": "^5.6"
-    }
+    "require": {}
 }
